feat: enhance BillOfMaterialService to include material details in product bills